k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: default
spec:
  selector:
    app: uptime-kuma
  type: NodePort
  ports:
    - port: 3001
      targetPort: 3001
      nodePort: 30001
